fixed character select overflow

--- a/style.css
+++ b/style.css
@@ -326,6 +326,7 @@ section {
             padding: 1rem 1rem 1rem 5rem;
 
             overflow-x: auto;
+            overflow-y: hidden;
             overscroll-behavior-inline: contain;
         }
         .charcard {
